Content writing and css

--- a/index.html
+++ b/index.html
@@ -4,22 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Daniel Website</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <p id="iamdan.uk">iamdan.uk</p>
-    <p>
-      I'm learning web development. Here I present some projects and some
-      writing.
-    </p>
+    <div id="content">
+      <p id="iamdan.uk">iamdan.uk</p>
+      <p>
+        I'm learning web development. Here I present some projects and some
+        writing.
+      </p>
 
-    <h1>Projects</h1>
-    <p>These were developed while following the Odin Project course?</p>
+      <h1>Projects</h1>
+      <p>These were developed while following the Odin Project course?</p>
+      <div class="links">
+        <a href="https://tetraline.github.io/etch-a-sketch/"
+          >✍️ Etch-a-Sketch</a
+        >
 
-    <h1>Writing</h1>
-    <p>
-      The writing published here is some of my thoughts on designing for the web
-      and the skills important for software engineering.
-    </p>
+        <a href="https://tetraline.github.io/rock-paper/"
+          >🗿 Rock, Paper, Scissors</a
+        >
+
+        <a href="https://tetraline.github.io/calculator/">🧮 Calculator</a>
+      </div>
+      <h1>Writing</h1>
+      <p>
+        The writing published here is some of my thoughts on designing for the
+        web and the skills important for software engineering.
+      </p>
+      <div class="links">
+        <a
+          href="https://tetraline.notion.site/On-Design-6ded6839ef214f16be63899c6fad0c19"
+          >🏙️ Design Thinking</a
+        >
+        <a
+          href="https://tetraline.notion.site/On-Time-Management-4e8c4fc7e25f4593a71c139afcc4ff86"
+          >⏰ Time Management</a
+        >
+      </div>
+    </div>
   </body>
 </html>
