Github logo, styles changes.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <img id="switch-label" width="100px" src="label.png" alt="" />
         <button onclick="toggleDark()" id="lightSwitch">💡</button>
       </div>
+      <a id="gitHubLink" href="https://github.com/Tetraline/">
+        <img src="GitHub.png" alt="GitHub" id="gitHubLink" />
+      </a>
     </div>
   </body>
   <script>
