--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
       </div>
       <div id="switch">
         <img id="switch-label" width="100px" src="label.png" alt="" />
-        <button onclick="toggleDark()" id="lightSwitch">💡</button>
+        <button
+          onclick="document.body.classList.toggle('dark-mode')"
+          id="lightSwitch"
+        >
+          💡
+        </button>
       </div>
       <a id="gitHubLink" href="https://github.com/Tetraline/">
         <img src="GitHub.png" alt="GitHub" id="gitHubLink" />
