--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </p>
 
       <h1>Projects</h1>
-      <p>I built these projects as part of a course I am following</p>
+      <p>I built these projects as part of a course I am following.</p>
       <div class="links">
         <a href="https://tetraline.github.io/etch-a-sketch/"
           >✍️ Etch-a-Sketch</a
@@ -36,9 +36,16 @@
           >🏙️ Design Thinking</a
         >
         <a
+          href="https://tetraline.notion.site/My-mini-internship-with-Accenture-3f654a97ffe8446590304d4112a2c3e2"
+        >
+          💻 My "mini-internship"</a
+        >
+        <!--
+        <a
           href="https://tetraline.notion.site/On-Time-Management-4e8c4fc7e25f4593a71c139afcc4ff86"
           >⏰ Time Management</a
         >
+-->
       </div>
       <div id="switch">
         <img id="switch-label" width="100px" src="label.png" alt="" />
